WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160734
[Win] Warning fix.
https://bugs.webkit.org/show_bug.cgi?id=160734
Summary
[Win] Warning fix.
Per Arne Vollan
Reported
2016-08-10 01:45:51 PDT
We currently get this warning a few times: 1>c:\projects\webkit\opensource\source\javascriptcore\bytecode\ArithProfile.h(78): warning C4245: 'initializing': conversion from 'int' to 'const uint32_t', signed/unsigned mismatch (compiling source file C:\Projects\WebKit\OpenSource\Source\JavaScriptCore\bytecode\ArithProfile.cpp)
Attachments
Patch
(1.91 KB, patch)
2016-08-10 02:00 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-08-10 02:00:19 PDT
Created
attachment 285725
[details]
Patch
Per Arne Vollan
Comment 2
2016-08-11 04:42:40 PDT
Thanks for reviewing :-)
WebKit Commit Bot
Comment 3
2016-08-11 05:04:11 PDT
Comment on
attachment 285725
[details]
Patch Clearing flags on attachment: 285725 Committed
r204373
: <
http://trac.webkit.org/changeset/204373
>
WebKit Commit Bot
Comment 4
2016-08-11 05:04:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug