[Win] Warning fix. https://bugs.webkit.org/show_bug.cgi?id=160734

Reviewed by Sam Weinig.

Add static cast from int to uint32_t.

* bytecode/ArithProfile.h:


Canonical link: https://commits.webkit.org/178884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204373 268f45cc-cd09-0410-ab3c-d52691b4dbfc